cluster/apps/kube-system/dashboard/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: https
          scheme: https
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "k8s-${SECRET_DOMAIN/./-}-tls"
